# supriyo116.github.io

./: CNAME  Procfile  implementation_plan.md  index.html  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
mycv_fastapi/: main.py
mycv_fastapi/static/css/: main.css
mycv_fastapi/templates/: index.html
static/css/: main.css
static/js/: main.js
