[tool.poetry]
name = "mycv-fastapi"
version = "0.1.0"
description = ""
authors = ["Supriyo <supriyo2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.128.0"}
uvicorn = {extras = ["standard"], version = "^0.40.0"}
gunicorn = "^24.0.0"
python-dotenv = "^1.2.1"
orjson = "^3.11.5"
jinja2 = "^3.1.6"
fastapi-mail = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
